--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,6 @@
-#body{
-    display: flex;
-    flex: column;
-    justify-content: center;
-    align-items: center;
-    padding:0;
-    margin:0;
+body{
+    padding:0px;
+    margin:0px;
 }
 
 #game-window{
@@ -14,7 +10,7 @@
     width:500px;
     border:solid black 5px;
     border-radius: 10px;
-    margin:0;
+    margin:0px;
     overflow: hidden;
 }
 
