--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body{
     max-height:80vh;
     border:solid black 5px;
     border-radius: 10px;
-    margin:0px;
+    margin:0px 0px 0px 0px;
     padding:0px;
     overflow: hidden;
 }
@@ -102,4 +102,40 @@ body{
     width:36vw;
     max-width:16vh;
     max-height:4vh;
+}
+
+#info-bar {
+    display: flex;
+    justify-content: space-between;
+    align-content: space-between;
+    flex-grow: 1;
+    width:90vw;
+    max-width: 40vh;
+    height:80px;
+}
+
+#info-bar span{
+    
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+#info-bar > span {
+    font-size: 200%;
+    display: flex;
+    justify-content:center;
+    align-content: center;
+    align-items: center;
+    margin:3px;
+}
+#clock {
+    border:solid black 3px;
+    border-radius:50%;
+    padding:5px;
+    margin:5px;
+}
+#score-box {
+    border-radius: 5px;
+    border:solid black 3px;
+    padding:0px 20px;
 }
