adjust background image positioning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,8 @@ h1 {
     margin:0px 0px 0px 0px;
     padding:0px;
     overflow: hidden;
-    background:  url("../images/background.png") no-repeat fixed center/cover;
-    background-size: contain;
+    background:  url("../images/background.png") no-repeat top center/cover;
+    background-size: 125%;
     background-color: black;
 }
 
