--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,3 +162,37 @@ h1 {
     font-size: 170%;
     padding:0px 5px;
 }
+
+#alert-window {
+    z-index: 10;
+    background-color: rgba(0,0,0,0.7);
+    border:solid white 3px;
+    margin:5%;;
+    position:absolute;
+    bottom:50%;
+    left:0%;
+    width:90%;
+    height:30%;
+    color:white;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    border-radius: 5px;
+    box-shadow: -10px 10px 10px black;
+}
+
+
+#alert {
+    font-size:200%
+}
+
+.alert-option{
+    background-color: red;
+    background-image: radial-gradient(rgb(255, 74, 74),red,rgb(186, 0, 0));
+    border:solid white 1px;
+    padding:5px;
+    border-radius:5px;
+    box-shadow: -5px 5px 5px black;
+}
