--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,12 +214,20 @@ h1 {
     }
     #instructions{
         order:1;
+        width:30%;
+        padding:10px;
+        font-size:150%;
     }
     #game-window{
         order:2;
     }
     #controls{
+        font-size:150%;
         order:3;
+        width:30%;
+        padding :10px;
+        margin:10px;
+        box-shadow:5px 5px 5px black;
     }
 
     
