--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,22 @@ header {
     display:flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 10px 10px black;
+    margin-bottom: 20px;
+    background-color:rgb(132, 1, 1);
+    padding:0px;
 }
 
 h1 {
-    font-size:300%;
+    font-size:500%;
+    margin:0px;
+    padding:0px;
+}
+
+h2 {
+    box-shadow:0px 5px 5px black;
+    background-color: rgb(124, 59, 59);
+    color:white;
 }
 
 #game-window{
@@ -226,9 +238,13 @@ h1 {
         order:3;
         width:30%;
         padding :10px;
-        margin:10px;
         box-shadow:5px 5px 5px black;
     }
 
-    
+    .text-box{
+        background-color: rgb(163, 154, 154);
+        box-sizing: border-box;
+        margin:0px 50px;
+        color:rgb(132, 1, 1);
+    }
 }
