--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,8 +90,6 @@ h2 {
     padding-left: 5px;
 }
 
-
-
 /* Game window styles */ 
 #game-window{
     z-index: 0;
@@ -274,6 +272,12 @@ h2 {
     padding:5px;
     border-radius:5px;
     box-shadow: -5px 5px 5px black;
+}
+
+/* Settings window styles */
+#settings-window{
+    display: none;
+    
 }
 
 /* Tablets and larger screen sizes */
