--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,8 +277,95 @@ h2 {
 /* Settings window styles */
 #settings-window{
     display: none;
-    
+    font-size:70%;
+    position:absolute;
+    top:0px;
+    left:0px;
+    z-index: 100;
+    background-color: black;
+    color:white;
+    height:60%;
+    width:100%;
+    border-radius: 10px;
+    justify-content: space-around; 
+    align-items: center;
 }
+
+#settings-window > div {
+    height:100%;
+    display: flex;
+    align-items: flex-end;
+    flex-direction:column;
+    justify-content: space-around;
+}
+
+#confirm-settings{
+    align-self: center;
+}
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 23px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  /* Slider styles take from W3 schools:
+   https://www.w3schools.com/howto/howto_css_switch.asp*/
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(83,48,72);
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 17px;
+    width: 17px;
+    left: 3px;
+    bottom: 3px;
+    background-color: rgb(184   ,109,44);
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: rgb(237, 206, 70);
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px rgb(237, 206, 70);
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(17px);
+    -ms-transform: translateX(17px);
+    transform: translateX(17px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
 
 /* Tablets and larger screen sizes */
 @media screen and (min-width:900px){
