--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,16 +279,17 @@ h2 {
     display: none;
     font-size:70%;
     position:absolute;
-    top:0px;
-    left:0px;
+    top:10%;
+    left:5%;
     z-index: 100;
-    background-color: black;
+    background-color: rgb(0,0,0,0.5);
     color:white;
-    height:60%;
-    width:100%;
+    height:40%;
+    width:90%;
     border-radius: 10px;
     justify-content: space-around; 
     align-items: center;
+    border:rgb(194,175,44) solid 3px;
 }
 
 #settings-window > div {
@@ -297,10 +298,26 @@ h2 {
     align-items: flex-end;
     flex-direction:column;
     justify-content: space-around;
+   
 }
 
 #confirm-settings{
     align-self: center;
+    border:solid white 2px;
+    border-radius:25px;
+    padding:0px 5px;
+    background-color: rgb(58, 160,223);
+}
+
+#confirm-settings:hover {
+   box-shadow:0px 0px 10px white;
+}
+select {
+    background-color: black;
+    color:white;
+    border-radius: 15px;
+    padding:3px 0px 3px 0px;
+    border:solid white 2px;
 }
 
 /* The switch - the box around the slider */
@@ -327,9 +344,10 @@ h2 {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgb(83,48,72);
+    background-color: black;
     -webkit-transition: .4s;
     transition: .4s;
+    border:solid white 2px;
   }
   
   .slider:before {
@@ -337,15 +355,15 @@ h2 {
     content: "";
     height: 17px;
     width: 17px;
-    left: 3px;
-    bottom: 3px;
-    background-color: rgb(184   ,109,44);
+    left: 2px;
+    bottom: 1px;
+    background-color: rgb(58, 160,223);
     -webkit-transition: .4s;
     transition: .4s;
   }
   
   input:checked + .slider {
-    background-color: rgb(237, 206, 70);
+    background-color: white;
   }
   
   input:focus + .slider {
